[tool.poetry]
name = "growth-mindset"
version = "0.1.0"
description = "Streamlit app to clean and convert CSV/Excel files"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.3"
streamlit = "^1.35.0"
pandas = "^2.2.2"
xlsxwriter = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
